fix: remove y overflow in single line code

--- a/web/src/app/chat/message/custom-code-styles.css
+++ b/web/src/app/chat/message/custom-code-styles.css
@@ -21,6 +21,10 @@
   table tr:nth-child(2n) {
     background: #f6f8fa;
   }
+
+  div {
+    overflow-y: hidden;
+  }
 }
 
 pre[class*="language-"] {
